@@ -39,6 +39,10 @@ class ActorFavIcon(ActorIcon):
             icon.hide()
 
     def set_icon(self, photoimage, x_offset, y_offset):
+        # dupricate ActorInfoIcon
+        photo = photoimage.photo
+        self.icon_offset = -22 if photo and not photo.is_local_file() \
+            else 0
         super(ActorFavIcon, self).set_icon(photoimage, x_offset, y_offset)
 
         if self._is_hidden():
