@@ -1,3 +1,7 @@
+2011-04-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* actor/share.py: Added a 'share' icon.
+
 2011-03-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.3-b2 release.
